<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/txtMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginText" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginText" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recordText" />

    <Button
        android:id="@+id/btnReporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reportText" />

    <Button
        android:id="@+id/btnContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactsText" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browser" />

    <Button
        android:id="@+id/btnCamara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cameraText" />

    <Button
        android:id="@+id/btnLlamar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toCallText" />
    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="intents" />
    <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="intents" />
    <Button
        android:id="@+id/btn5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="intents" />


</LinearLayout>