<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    android:background="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="25dp"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="E Corp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:typeface="sans"
            android:paddingTop="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2.5"
        android:gravity="center" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/imgemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                app:srcCompat="@drawable/ic_mail" />

            <EditText
                android:id="@+id/edtCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:ems="10"
                android:hint="@string/textEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/imglock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                app:srcCompat="@drawable/ic_pass" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/textContraseña"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                />

        </LinearLayout>
        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textBtnIniciar"
            android:background="@drawable/efecto_redondeado"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_margin="15dp"
            />
    </LinearLayout>

</LinearLayout>